[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://resources/TitleScreenV1.png" type="Texture" id=2]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreenV1" type="Sprite" parent="CanvasLayer/CenterContainer"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -46.0
margin_right = 44.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0
text = "Play"

[node name="TestLevel" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 24.0
margin_right = 88.0
margin_bottom = 44.0
text = "Test level"

[node name="LevelEditor" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 48.0
margin_right = 88.0
margin_bottom = 68.0
text = "Level editor"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 72.0
margin_right = 88.0
margin_bottom = 92.0
text = "Quit"
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/TestLevel" to="." method="_on_TestLevel_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/LevelEditor" to="." method="_on_LevelEditor_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
